--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
-header{
-    display: flex;
-    justify-content: center;
-    background-color: lightgray;
+header {
+  display: flex;
+  justify-content: center;
+  background-color: var(--color-water-10);
 }
